--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "sinon-chai": "2.8.0"
   },
   "dependencies": {
+    "android-versions": "^1.3.0",
     "cheerio": "~0.22.0",
     "commander": "^2.14.1",
     "google-play-scraper": "^6.0.0",
