--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
     "android-versions": "^1.3.0",
     "cheerio": "~0.22.0",
     "commander": "^2.14.1",
+    "ejs": "^2.6.1",
     "google-play-scraper": "^6.1.0",
     "googleapis": "^20.2.0",
     "moment": "^2.20.1",
+    "nodemailer": "^4.6.7",
     "npm": "^5.6.0",
     "request": "~2.67.0"
   }
