--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@trademe/reviewme",
-  "version": "1.0.8",
+  "version": "1.1.0",
   "description": "Google Play and App Store reviews posted to Slack",
   "main": "index.js",
   "scripts": {
@@ -41,13 +41,13 @@
     "sinon-chai": "2.8.0"
   },
   "dependencies": {
-    "android-versions": "^1.3.0",
+    "android-versions": "^1.4.0",
     "cheerio": "~0.22.0",
-    "commander": "^2.14.1",
+    "commander": "^2.19.0",
     "google-play-scraper": "^6.1.0",
     "googleapis": "^20.2.0",
-    "moment": "^2.20.1",
-    "npm": "^5.6.0",
-    "request": "~2.67.0"
+    "moment": "^2.22.2",
+    "npm": "^5.10.0",
+    "request": "^2.88.0"
   }
 }
