--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "commander": "^4.1.1",
     "google-play-scraper": "^8.0.2",
     "googleapis": "^52.1.0",
+    "node-schedule": "^1.3.2",
     "request": "^2.88.0"
   }
 }
